--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.5",
+    "@types/react": "^17.0.50",
+    "@types/react-dom": "^18.0.7",
+    "@types/react-window": "^1.8.5",
+    "axios": "^1.1.3",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.8.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -39,7 +47,6 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^5.0.0-alpha.26",
-    "react-virtualized-auto-sizer": "^1.0.4",
-    "react-window": "^1.8.6"
+    "react-window": "^1.8.7"
   }
 }
